# AgentRunner

./: AGENTS.md  Dockerfile  README.md  docker-compose.yml  dummy.py  fix.py  fix_tool_names.py  patch.py  patch_builder.py  patch_builder2.py  patch_builder_start.py  patch_manifest.py  patch_nodes.py  patch_player.py  patch_player2.py  patch_state.py  patch_test.py  patch_test2.py  patch_todo.py  patch_tools.py  pre_commit.py  pyproject.toml  runner_service_todo.md  system_agents_arch.txt  todo.md
.github/workflows/: ci.yml
app/: config.py  logger.py  main.py
app/api/routes/: __init__.py  player.py
app/models/: api.py  builtin_tools.py  graph.py  manifest.py  state.py  tools.py
app/services/: graph_builder.py  kafka.py  mcp.py  rest_api.py  retry_utils.py
tests/: test_api_models.py  test_builtin_tools.py  test_config.py  test_env.py  test_graph_builder.py  test_kafka.py  test_logger.py  test_manifest_parsing.py  test_mcp.py  test_player_api.py  test_player_execution.py  test_player_integration.py  test_rest_api.py  test_retry.py  test_state.py  test_structured_output.py
